# libsodium

./: .gitignore  CMakeLists.txt  configure.cmake
src/libsodium/: CMakeLists.txt
test/: CMakeLists.txt
